# flightsnap

./: README.MD  flightsnap.py  keys.py  pyproject.toml  sample.html
flight_log/: __init__.py  flight_log.py
flight_log/test/: test_flight_log.py
folder_extractor/: __init__.py  folder_extractor.py
folder_extractor/test/: test_folder_extractor.py
folder_extractor/test/data/: Flight Track Log VLG82HD 03-Apr-2022 (BIO _ LEBB-LGW _ EGKK) - FlightAware.html
htmlbuilder/: __init__.py  htmlbuilder.py
htmlbuilder/test/: test_htmlbuilder.py
maps/: maps.py
maps/test/: test_maps.py
