[tool.poetry]
name = "flightsnap"
version = "0.1.0"
description = ""
authors = ["Rafa <rgargente@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.1"
attrs = "^22.1.0"
lxml = "^4.9.1"
pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
